--- a/index.html
+++ b/index.html
@@ -1747,8 +1747,9 @@
                     <label for="model-name">モデル名:</label>
                     <select id="model-name" aria-label="モデル名">
                         <optgroup label="Gemini 3.1">
-                            <option value="gemini-3.1-pro">gemini-3.1-pro</option>
-                            <option value="gemini-3.1-flash">gemini-3.1-flash</option>
+                            <!-- valueを正確なAPI識別子に変更。表示名(タグの中身)は任意でOK -->
+                            <option value="gemini-3.1-pro-preview">Gemini 3.1 Pro (Preview)</option>
+                            <option value="gemini-3.1-flash-preview">Gemini 3.1 Flash (Preview)</option> <!-- 必要に応じてflashも正確な名前に -->
                         </optgroup>
                         <optgroup label="Gemini 3 (Preview)">
                             <option value="gemini-3-pro">gemini-3-pro</option>
